# wikiki

./: .gitignore  AGENTS.md  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  test-sqlite.cjs  test.js  tsconfig.app.json  vercel.json  vite.config.ts  wrangler.jsonc
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.spark/: meta.json
api/: blob-config.ts  blob-delete.ts  blob-list.ts  blob-upload.ts  blob.ts  d1-query.ts
scripts/: build.sh  generate-dummy-icons.mjs
src/: app.js  app.tsx  index.css  index.js  index.tsx  tailwind-theme.css  typography.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/components/: AppSidebar.js  AppSidebar.tsx  BlobSyncPanel.tsx  BrightHoneyBg.tsx  BundleDetail.tsx  BundleDialog.tsx  ConfirmDialog.js  ConfirmDialog.tsx  DarkGreenBg.tsx  EmptyState.js  EmptyState.tsx  FloatingTabBar.tsx  GreyYellowBg.tsx  Layout.js  Layout.tsx  MindmapView.js  MindmapView.tsx  MistWaveBg.tsx  MosaicTilesBg.tsx  PageDialog.js  PageDialog.tsx  ProductDetail.js  ProductDetail.tsx  ProductDialog.js  ProductDialog.tsx  RichTextEditor.js  RichTextEditor.tsx  SearchResults.js  SearchResults.tsx  SuperSearchOverlay.js  SuperSearchOverlay.tsx
src/data/: bundles.ts  products.js  products.ts  quota-exceeded-error.js  quota-exceeded-error.ts
src/hooks/: use-mobile.js  useBundles.ts  useLanguage.tsx  useProducts.js  useProducts.ts  useRemoteBundles.ts  useRemoteSearch.ts  useTheme.js  useTheme.ts
src/i18n/: translations.ts
(+23 files in other folders)
